# bom-pack

./: .tool-versions  README.md  bom_utils.py  dxf_utils.py  main.py  nester.py  pyproject.toml  shapes.py
examples/: bom.csv  bottom.dxf  foot.dxf  output-1.dxf  output-2.dxf  output.dxf  side-a.dxf  side-b.dxf
nesters/: genetic.py  rect.py  simple.py  skyline.py  utils.py
src/bom_packer/: bom_utils.py  cli.py  core.py  dxf_utils.py  main.py  shapes.py
src/bom_packer/dxf/: entity_handlers.py  io.py  utils.py
src/bom_packer/nesters/: rect.py  utils.py
