[project]
name = "bom-packer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Noah H. Smith", email = "noah@batteredoats.com"},
]
dependencies = [
    "ezdxf>=1.3.3",
    "rectpack>=0.2.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[project.scripts]
bom = "bom_packer.main:main"
